#### DOCU OF PACKAGE ####

### TODO
* position text on basis of spherical coords
* functions to convert back and forth between cartesian, spherical and projected coords, so user can supply
any of these to any function, e.g. in map_lines it is a bit ugly currently
* harmonize input data in dataframe
* project outer lines of convex hulls?
* convex hulls at map borders?
* find convex hull centroid

### CHANGES (0.1)
* add several functions