@@ -9,6 +9,7 @@ export(centroid)
 export(map_centroid_label)
 export(map_centroid_point)
 export(map_centroid_star)
+export(map_convex_hull)
 export(map_data)
 export(map_grid)
 export(map_labels)
