@@ -10,4 +10,5 @@ any of these to any function, e.g. in map_lines it is a bit ugly currently
 * find convex hull centroid
 
 ### CHANGES (0.1)
+* map_convex_hull added
 * add several functions
